# ic-engine

./: .gitignore  CMakeLists.txt  README.md  build-all.bat  clean-all.bat
cmake/: ic_macros.cmake  ic_options.cmake  ic_version.cmake
cmake/cmake-compiler/: clang.cmake
engine/: CMakeLists.txt
engine/src/: defines.h  entry.h  game_inst.h  test.h
engine/src/containers/: darray.cpp  darray.h
engine/src/core/: application.cpp  application.h  application_event.h  assertions.h  event.cpp  event.h  ic_memory.cpp  ic_memory.h  input.cpp  input.h  layer.cpp  layer.h  layer_stack.cpp  layer_stack.h  logger.cpp  logger.h
engine/src/platform/: platform.h  win32_platform.cpp
testbed/: CMakeLists.txt
testbed/src/: entry.cpp  game.cpp  game.h  main.cpp
